C3: Reworked legend to be a separate DOM element; added scroll inside legend C4: Fixed truncated legend by adding more space and ellipsis (with tooltip) C7: Clicking on the legend highlight one line in the graph; this was already in place, put more emphasis in the legend itself #12: Fixed period range to be from April 1st to March 31 of selected decades. Other: Fixed issue with crosstab titles not being truncated properly after tooltip work

--- a/css/chart.css
+++ b/css/chart.css
@@ -32,6 +32,51 @@
 
 /* NB Chart does not use CSS, so it can be downloaded in one piece */
 
-.legend, .axis {
+.axis {
   cursor: pointer;
+}
+
+.legend {
+	position: absolute;
+	right: 40px;
+	width: 115px;
+	top: 0;
+}
+
+.legend > h6 {
+	font-size: 12px;
+	margin-bottom: 0;
+	text-transform: uppercase;
+}
+
+.legend-labels {
+	cursor: pointer;
+	max-height: 150px;
+	box-sizing: border-box;
+	padding: 5px;
+	text-align: left;
+	background-color: #f5f5f5;
+	width: 100%;
+}
+
+
+.legend-labels > p {
+	margin-bottom: 0;
+	font-size: 10px;
+	width: 100%;
+	overflow-x: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+.legend-labels span {
+	vertical-align: top;
+}
+
+.legend-labels > p.highlight {
+	font-weight: bold;
+}
+
+.legend-labels > p.highlight path {
+	stroke-width: 3px;
 }
